--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
         "scripts": ["background.js"]
     },
     "icons": {
-        "16": "icon.png"
+        "16": "icon.png",
+        "128": "bayan.png"
     }
 }
